# viso2

./: README.md
libviso2/: CMakeLists.txt
viso2_ros/: CMakeLists.txt
viso2_ros/cfg/: dynamic_params.cfg  stereo_odometer_params.yaml
viso2_ros/launch/: stereo.launch
viso2_ros/src/: stereo_odometer.cpp
